chore: update the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
 
     <title>Calculator APP</title>
+    <h1>Random Love Quote</h1>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
