chore:update the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Calculator APP</title>
-    <h1>Random Love Quote</h1>
+    <title>Math Magicians</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
